@@ -46,7 +46,7 @@
     <gwt.version>2.6.1</gwt.version>
     <lwjgl.version>2.9.2</lwjgl.version>
     <jglfw.version>1.1</jglfw.version>
-    <robovm.version>1.6.0</robovm.version>
+    <robovm.version>1.8.0</robovm.version>
   </properties>
 
   <modules>
